# godot-psd-importer

./: .gitignore  Cargo.toml  LICENSE  PsdImporter.gdns  README.md  Test.gd  Test.tscn  project.godot  psd.gdnlib
addons/psd_importer/: importer_example_default.gd  importer_example_only_starting_with_letter_a.gd  plugin.cfg  plugin.gd  psd_importer_script.gd
src/: bin.rs  lib.rs  main.rs  psd.rs
